fix more alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,14 +101,14 @@ h2 {
 }
 
 #friends {
-  margin: 20px;
-  margin-top: 125px;
+  margin: 10px;
+  margin-top: 150px;
   float: right;
 }
 
 #family {
-  margin: 20px;
-  margin-top: 40px;
+  margin: 10px;
+  margin-top: 10px;
   float: right;
 }
 
